@@ -19,10 +19,11 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #define _ARRAYGROWABLETEMPLATE_HPP
 
 #include <assert.h>
-#include <stdlib.h>
+
+#include "NoCopy.hpp"
 
 template< class TYPE >
-class ArrayGrowableTemplate
+class ArrayGrowableTemplate : public NoCopy
 {
 protected:
     unsigned long size;
