@@ -20,10 +20,11 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 #include <assert.h>
 #include <string.h>
-#include <stdlib.h>
+
+#include "NoCopy.hpp"
 
 template< class TYPE >
-class ArrayTemplate
+class ArrayTemplate : public NoCopy
 {
 protected:
     unsigned long size;
@@ -68,7 +69,6 @@ public:
 
         size = 0;
     }
-
 };
 
 
