@@ -18,10 +18,10 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #ifndef _LINKLISTSINGLETEMPLATE_HPP
 #define _LINKLISTSINGLETEMPLATE_HPP
 
-#include <stdlib.h>
+#include "NoCopy.hpp"
 
 template< class TYPE >
-class LinkListSingleTemplate
+class LinkListSingleTemplate : public NoCopy
 {
 protected:
     TYPE *front;
