@@ -60,8 +60,6 @@ MouseInterface::cursors_t MouseInterface::cursors;
 
 void MouseInterface::initialize()
 {
-    event_queue.initialize( 20 );
-
     const char* cursorpath = "pics/cursors/";
     char** cursorfiles = FileSystem::enumerateFiles(cursorpath);
     for(char** i = cursorfiles; *i != 0; i++) {
@@ -129,7 +127,7 @@ void MouseInterface::setLeftButtonDown()
     event.button = left_button;
     event.event = MouseEvent::EVENT_DOWN;
     event.down_pos = left_button_down_pos;
-    event_queue.enqueue( event );
+    event_queue.push(event);
 }
 
 void MouseInterface::setLeftButtonUp()
@@ -152,10 +150,10 @@ void MouseInterface::setLeftButtonUp()
         event.event  = MouseEvent::EVENT_CLICK;
 
     event.down_pos = left_button_down_pos;
-    event_queue.enqueue( event );
+    event_queue.push(event);
 
     event.event = MouseEvent::EVENT_UP;
-    event_queue.enqueue( event );
+    event_queue.push(event);
 }
 
 void MouseInterface::setLeftButtonDoubleDown()
@@ -182,7 +180,7 @@ void MouseInterface::setRightButtonDown()
     event.button = right_button;
     event.event = MouseEvent::EVENT_DOWN;
     event.down_pos = right_button_down_pos;
-    event_queue.enqueue( event );
+    event_queue.push( event );
 }
 
 void MouseInterface::setRightButtonUp( void )
@@ -205,10 +203,10 @@ void MouseInterface::setRightButtonUp( void )
         event.event  = MouseEvent::EVENT_CLICK;
 
     event.down_pos = right_button_down_pos;
-    event_queue.enqueue( event );
+    event_queue.push( event );
 
     event.event = MouseEvent::EVENT_UP;
-    event_queue.enqueue( event );
+    event_queue.push( event );
 }
 
 void MouseInterface::setRightButtonDoubleDown()
@@ -235,7 +233,7 @@ void MouseInterface::setMiddleButtonDown()
     event.button = middle_button;
     event.event = MouseEvent::EVENT_DOWN;
     event.down_pos = middle_button_down_pos;
-    event_queue.enqueue( event );
+    event_queue.push( event );
 }
 
 void MouseInterface::setMiddleButtonUp()
@@ -258,10 +256,10 @@ void MouseInterface::setMiddleButtonUp()
         event.event  = MouseEvent::EVENT_CLICK;
 
     event.down_pos = middle_button_down_pos;
-    event_queue.enqueue( event );
+    event_queue.push( event );
 
     event.event = MouseEvent::EVENT_UP;
-    event_queue.enqueue( event );
+    event_queue.push( event );
 }
 
 void MouseInterface::setMiddleButtonDoubleDown()
